# ai-dial-ums-ui-agent

./: CLAUDE.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
agent/: app.py  conversation_manager.py  prompts.py
agent/clients/: dial_client.py  http_mcp_client.py  stdio_mcp_client.py
