[project]
name = "ai-dial-ums-ui-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.118.0",
    "fastmcp==2.10.1",
    "httpx>=0.28.1",
    "openai==2.0.0",
    "redis[hiredis]==5.0.0",
    "uvicorn>=0.44.0",
]
